# marketplace

./: .gitignore  LICENSE  Makefile  README.md  build.sh  pyproject.toml
marketplace/: manage.py
marketplace/home/: apps.py  form.py  models.py  urls.py  views.py
marketplace/home/migrations/: 0001_initial.py  0002_alter_product_price.py
marketplace/home/templates/: addproduct.html  base.html  index.html  product_details.html  products.html
marketplace/project/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
marketplace/seller/: admin.py  apps.py  models.py  urls.py  views.py
marketplace/seller/migrations/: 0001_initial.py
marketplace/users/: admin.py  apps.py  form.py  models.py  urls.py  views.py
marketplace/users/migrations/: 0001_initial.py
marketplace/users/templates/: seller_form.html
