[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = ""
authors = ["Pradyumna Krishna <git@onpy.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
pillow = "^10.0.0"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
gunicorn = "^21.2.0"
django-storages = {extras = ["google"], version = "^1.14"}
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = "100"

[tool.black]
exclude="migrations"
line-length = 100

[tool.isort]
skip="migrations"
profile = "black"
